--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   http: ^0.13.5
   shared_preferences: ^2.0.15
   get: ^4.6.5
+  firebase_auth: ^4.1.2
+  google_sign_in: ^5.4.2
+  font_awesome_flutter: ^10.2.1
+  provider: ^6.0.4
 
 dev_dependencies:
   flutter_test:
